[gd_scene load_steps=5 format=3 uid="uid://cyda31binycbl"]

[ext_resource type="Script" path="res://Scripts/menu_principal.gd" id="1_nl36q"]
[ext_resource type="Texture2D" uid="uid://dr2w7k2oy1qqp" path="res://Assests/Mapas/fondoMenu.jpeg" id="1_wtf8s"]
[ext_resource type="AudioStream" uid="uid://enlla8vsww8d" path="res://Assests/Otros/stranger-things-124008.mp3" id="3_ncenf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j8pky"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nl36q")

[node name="FondoMenu" type="Sprite2D" parent="."]
position = Vector2(640.5, 359.5)
scale = Vector2(0.333073, 0.333796)
texture = ExtResource("1_wtf8s")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -94.0
offset_right = 144.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 19

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Jugar
"

[node name="Opcions" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Opciones
"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Salir
"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -59.5
offset_right = 144.0
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 19

[node name="1Player" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1 Player"

[node name="2Players" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "2 Players
"

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -94.0
offset_right = 144.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 19

[node name="OptionButton" type="OptionButton" parent="VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
selected = 0
item_count = 4
popup/item_0/text = "Dificultad"
popup/item_0/separator = true
popup/item_1/text = "Facil"
popup/item_1/id = 1
popup/item_2/text = "Medio"
popup/item_2/id = 2
popup/item_3/text = "Dificil"
popup/item_3/id = 3

[node name="CheckButton" type="CheckButton" parent="VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_j8pky")
button_pressed = true
text = "Musica"

[node name="Atras" type="Button" parent="VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Atras
"
alignment = 0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ncenf")
volume_db = -30.0

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Opcions" to="." method="_on_opcions_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer2/1Player" to="." method="_on_player_pressed"]
[connection signal="pressed" from="VBoxContainer2/2Players" to="." method="_on_players_pressed"]
[connection signal="item_selected" from="VBoxContainer3/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="VBoxContainer3/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="VBoxContainer3/Atras" to="." method="_on_atras_pressed"]
